--- a/WebQLNS/Web.config
+++ b/WebQLNS/Web.config
@@ -5,9 +5,11 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="QLNhanVienConnectionString" connectionString="Data Source=.;Initial Catalog=QLNhanVien;User ID=sa;Password=sa"
+    <add name="QLNhanVienConnectionString" connectionString="Data Source=T\SQLEXPRESS01;Initial Catalog=QLNhanVien;User ID=sa;Password=sa"
       providerName="System.Data.SqlClient" />
-    <add name="QLNhanVienConnectionString2" connectionString="Data Source=.;Initial Catalog=QLNhanVien;Persist Security Info=True;User ID=sa;Password=sa"
+    <add name="QLNhanVienConnectionString2" connectionString="Data Source=T\SQLEXPRESS01;Initial Catalog=QLNhanVien;Persist Security Info=True;User ID=sa;Password=sa"
+      providerName="System.Data.SqlClient" />
+    <add name="QLNhanVienConnectionString3" connectionString="Data Source=T\SQLEXPRESS01;Initial Catalog=QLNhanVien;User ID=sa;Password=sa;Trust Server Certificate=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
