--- a/WebQLNS/WebQLNS.csproj
+++ b/WebQLNS/WebQLNS.csproj
@@ -93,6 +93,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Web.config" />
+    <Content Include="ThemNhanVien.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
@@ -119,6 +120,13 @@
     </Compile>
     <Compile Include="Site.Master.designer.cs">
       <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
+    <Compile Include="ThemNhanVien.aspx.cs">
+      <DependentUpon>ThemNhanVien.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ThemNhanVien.aspx.designer.cs">
+      <DependentUpon>ThemNhanVien.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
